src/components/css/Nav.sass
.NavBar
    display: flex
    flex-wrap: wrap
    justify-content: space-between
    z-index: 100
    align-items: center
    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2)
    padding: 20px
    position: relative
    height: 80px

.NavContainer
    flex: 1
    display: flex
    align-items: center

.NavCategories:hover
    cursor: pointer

.NavCategories
    display: flex
    align-items: center
    margin-left: 20px
    font-size: 20px
    @media screen and (max-width: 1250px)
        display: none

.NavButton
    background: none
    border: 0
    font: inherit
    color: inherit
    line-height: normal
    overflow: visible
    padding: 0

.NavButton:hover
    cursor: pointer

.NavDisplayMenuButton
    display: none
    @media screen and (max-width: 1250px)
        display: flex
        width: 30px
        height: 30px
        justify-content: flex-end
        position: absolute
        right: 10px

.NavDisplayMenuButton:hover
    cursor: pointer

.NavContainerLink
    flex: 1
    display: flex
    gap: 3px
    margin-right: 0
    float: right
    justify-content: flex-end

.NavContainerLink a
    padding: 10px
    color: inherit
    text-decoration: none

.NavContainerSearch
    flex: 1

.NavSearchBar
    width: 100%
    border-radius: .7rem
    border-width: 1px
    height: 2rem
    padding: 0 0.6rem
    outline: 0
    appearance: none

@media screen and (max-width: 1250px)
    .NavBar
        display: block
        position: relative
        padding: 10px
        align-items: center
        flex-direction: column
        justify-content: center
        transition: 0.5s

    .NavBar.clicked
        height: 100vh

    .NavBar.unclicked
        height: 17vh

    .NavContainer
        text-align: center
        display: flex
        flex-direction: column

    .NavContainerSearch
        z-index: 10
        display: flex
        align-items: center
        margin-top: 10px
        width: 100%
        height: 7dvh

    .NavSearchBar
        width: 70%
        margin-left: auto
        margin-right: auto

    .NavContainerLink
        z-index: 1
        display: flex
        flex-direction: column
        width: 100%
        position: relative
        text-align: center
        transition: 0.5s

    .NavContainerLink.clicked
        visibility: visible
        min-height: 120px
        height: 13dvh
        opacity: 1

    .NavContainerLink.unclicked
        min-height: 120px
        visibility: collapse
        opacity: 0

